# AutoLSEQ

APP_Matlab/: Algo2IRv2_2.mlapp
VST/: CMakeLists.txt  Dependencies.cmake  IR.txt  README.md
VST/src/: CMakeLists.txt  CoefficientParser.cpp  CoefficientParser.h  FilterBank.cpp  FilterBank.h  Main.cpp  PluginBase.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginState.cpp  PluginState.h  StereoFilter.cpp  StereoFilter.h
